--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     <div id="app">
         <hello-1></hello-1>
         <vued></vued>
+        <d-html></d-html>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <script src="./components/hello.js"></script> 
+    <script src="./components/DirectiveHtml.js"></script>  
     <script src="./components/vue-d.js"></script>  
+    
     <script>
         let vm = new Vue({
             el: '#app',
