--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <hello-1></hello-1>
         <vued></vued>
         <d-html></d-html>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    <script src="./components/directiveShow.js"></script>
     <script src="./components/hello.js"></script> 
     <script src="./components/DirectiveHtml.js"></script>  
     <script src="./components/vue-d.js"></script>  
