--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <hello-1 ></hello-1>
         <vued></vued>
         <d-html></d-html>
-        
+        <saludar-comp/>        
     </div>
     <script src="./components/directiveIf.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
@@ -24,7 +24,8 @@
     <script src="./components/directiveFor.js"></script> 
     <script src="./components/directiveOn.js"></script>
     <script src="./components/DirectiveHtml.js"></script>  
-    <script src="./components/vue-d.js"></script>  
+    <script src="./components/vue-d.js"></script> 
+    <script src="./components/tarea.js"></script> 
     <script>
         let vm = new Vue({
 
