--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./components/hello.js"></script> 
     <script src="./components/directiveFor.js"></script> 
     <script src="./components/directiveOn.js"></script>
+    <script src="./components/directiveModel.js"></script>
     <script src="./components/DirectiveHtml.js"></script>  
     <script src="./components/vue-d.js"></script> 
     <script src="./components/tarea.js"></script> 
