--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="./components/DirectiveHtml.js"></script>
     <script src="./components/slotComponents/buttonComp.js"></script>
     <script src="./components/directiveSlot.js"></script>
+    <script src="./components/directiveOnce.js"></script>
     <script src="./components/vue-d.js"></script> 
     <script src="./components/tarea.js"></script> 
     <script>
