--- a/index2.html
+++ b/index2.html
@@ -9,10 +9,12 @@
 <body>
     <div id="app">
         <computed-1></computed-1>
+        <c-getset/>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
     <script src="./components/computed.js"></script>
+    <script src="./components/getSet.js"></script>
     <script>
         let vm = new Vue({
 
