--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app">
         <computed-1></computed-1>
-        <c-getset/>
+        <c-getset></c-getset>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
